Mudança de cores do Portfólio

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <p id="welcome-text">Seja bem-vindo!</p>
       <ul id="social-container">
         <li><a href="https://www.linkedin.com/in/bruno-zaiatz-6136671a7/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+        <li><a href="https://github.com/brnztz" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
       </ul>
       <div id="email-container">
         <ion-icon name="mail-outline"></ion-icon><a href="mailto:bzaiatz8@gmail.com">bzaiatz8@gmail.com</a>
