--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="https://github.com/brnztz" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
       </ul>
       <div id="email-container">
-        <ion-icon name="mail-outline"></ion-icon><a href="mailto:bzaiatz8@gmail.com">bzaiatz8@gmail.com</a>
+        <ion-icon name="mail-outline"></ion-icon><a href="mailto:brunozaiatz@gmail.com">brunozaiatz@gmail.com</a>
       </div>
     </aside>
     <section id="about-container">
